--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -8,16 +8,14 @@
 <script type="text/javascript" src="js/lib/easyTooltip.js"></script>
 <script type="text/javascript" src="js/lib/autoresize.jquery.js"></script>
 <script type="text/javascript" src="js/buildChordDiagram.js"></script>
-<script type="text/javascript" src="js/loadXML.js"></script>
-<script type="text/javascript" src="js/parseChordsXML.js"></script>
-<script type="text/javascript" src="js/parseSongsXML.js"></script>
+<script type="text/javascript" src="js/loadJSON.js"></script>
 <script type="text/javascript" src="js/songLists.js"></script>
 <script type="text/javascript">
 
 $(document).ready(function(){
 	$("body").songLists(
-		parseChordsXML(loadXML("data/chords.xml")),
-		parseSongsXML(loadXML("data/songs.xml"))
+		loadJSON("data/chords.json"),
+		loadJSON("data/songs.json")
 	);
 
 	$("body").append("<a class='newSong' href='index.html' target='_blank'>+</a>");
