--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
-<title>Songs</title>
-<link rel="stylesheet" type="text/css" href="css/main.css" />
-<script type="text/javascript" src="js/lib/jquery-3.4.1.js"></script>
-<script type="text/javascript" src="js/lib/easyTooltip.js"></script>
-<script type="text/javascript" src="js/lib/autoresize.jquery.js"></script>
-<script type="text/javascript" src="js/buildChordDiagram.js"></script>
-<script type="text/javascript" src="js/loadJSON.js"></script>
-<script type="text/javascript" src="js/songLists.js"></script>
-<script type="text/javascript">
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"/>
+    <title>Songs</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <script type="text/javascript" src="js/lib/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="js/lib/easyTooltip.js"></script>
+    <script type="text/javascript" src="js/lib/autoresize.jquery.js"></script>
+    <script type="text/javascript" src="js/buildChordDiagram.js"></script>
+    <script type="text/javascript" src="js/buildSongList.js"></script>
+    <script type="text/javascript" src="js/loadJSON.js"></script>
+    <script type="text/javascript">
+        $(document).ready(() => {
+            buildSongList(
+                $("body"),
+                loadJSON("data/songs.json"),
+                loadJSON("data/chords.json")
+            );
 
-$(document).ready(function(){
-	$("body").songLists(
-		loadJSON("data/chords.json"),
-		loadJSON("data/songs.json")
-	);
-
-	$("body").append("<a class='newSong' href='index.html' target='_blank'>+</a>");
-});
-
-</script>
+            $("body").append("<a class='newSong noPrint' href='index.html' target='_blank'>+</a>");
+        });
+    </script>
 </head>
 <body>
 </body>
