Add text when entering a new song

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -32,6 +32,8 @@
                 <input type="text" name="performer">
                 <div>Title</div>
                 <input type="text" name="name">
+                <div>Text</div>
+                <textarea name="text"></textarea>
             </fieldset>
         </form>
     </div>
