Rename song name to title

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -31,7 +31,7 @@
                 <div>Performer</div>
                 <input type="text" name="performer">
                 <div>Title</div>
-                <input type="text" name="name">
+                <input type="text" name="title">
                 <div>Text</div>
                 <textarea name="text"></textarea>
             </fieldset>
